--- a/LinkCrawler/LinkCrawler/App.config
+++ b/LinkCrawler/LinkCrawler/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="outputProviders" type="System.Configuration.DictionarySectionHandler" />
@@ -20,14 +20,23 @@
     <add key="Slack.WebHook.Url" value="https://hooks.slack.com/services/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" />
     <add key="Slack.WebHook.Bot.Name" value="Homer Bot" />
     <add key="Slack.WebHook.Bot.IconEmoji" value=":homer:" />
-    <add key="Slack.WebHook.Bot.MessageFormat" value="*Doh! There is a link not working*
-Url: {0}
-Statuscode: {1}
-The link is placed on this page: {2}" />
+    <add key="Slack.WebHook.Bot.MessageFormat" value="*Doh! There is a link not working* Url: {0} Statuscode: {1} The link is placed on this page: {2}" />
   </appSettings>
   <outputProviders>
     <add key="Console" value="LinkCrawler.Utils.Outputs.ConsoleOutput" />
     <!--<add key="Csv" value="LinkCrawler.Utils.Outputs.CsvOutput" />-->
     <!--<add key="Slack" value="LinkCrawler.Utils.Outputs.SlackOutput" />-->
   </outputProviders>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
