--- a/LinkCrawler/LinkCrawler/packages.config
+++ b/LinkCrawler/LinkCrawler/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Bootstrapper" version="2.0.3.13" targetFramework="net452" />
   <package id="Bootstrapper.StructureMap" version="2.0.3.13" targetFramework="net452" />
-  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net452" requireReinstallation="true" />
   <package id="CommonServiceLocator.StructureMapAdapter.Unofficial" version="3.0.5.0" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.8.7" targetFramework="net452" />
   <package id="RestSharp" version="106.3.1" targetFramework="net452" />
