--- a/LinkCrawler/LinkCrawler/App.config
+++ b/LinkCrawler/LinkCrawler/App.config
@@ -11,7 +11,7 @@
     <add key="CheckImages" value="true"/>
     <add key="BaseUrl" value="https://github.com"/>
     <add key="SuccessHttpStatusCodes" value="1xx,2xx,3xx"/>
-    <add key="InterestingHttpStatusCodes" value="4xx,9xx"/>
+    <add key="InterestingHttpStatusCodes" value="*"/>
     <!--explanation of regex below: http://regexr.com/3cqt9 -->
     <add key="ValidUrlRegex" value="(^http[s]?:\/{2})|(^www)|(^\/{1,2})"/>
     <add key="PrintSummary" value="true"/>
