--- a/LinkCrawler/LinkCrawler/App.config
+++ b/LinkCrawler/LinkCrawler/App.config
@@ -9,9 +9,11 @@
   <appSettings>
     <add key="OnlyReportBrokenLinksToOutput" value="false"/>
     <add key="CheckImages" value="true"/>
+    <add key="FollowRedirects" value="false"/>
     <add key="BaseUrl" value="https://github.com"/>
     <add key="SuccessHttpStatusCodes" value="1xx,2xx,3xx"/>
     <add key="InterestingHttpStatusCodes" value="*"/>
+    <add key="RedirectHttpStatusCodes" value="3xx"/>
     <!--explanation of regex below: http://regexr.com/3cqt9 -->
     <add key="ValidUrlRegex" value="(^http[s]?:\/{2})|(^www)|(^\/{1,2})"/>
     <add key="PrintSummary" value="true"/>
