--- a/LinkCrawler/LinkCrawler/packages.config
+++ b/LinkCrawler/LinkCrawler/packages.config
@@ -2,10 +2,10 @@
 <packages>
   <package id="Bootstrapper" version="2.0.3.13" targetFramework="net452" />
   <package id="Bootstrapper.StructureMap" version="2.0.3.13" targetFramework="net452" />
-  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net452" requireReinstallation="true" />
-  <package id="CommonServiceLocator.StructureMapAdapter.Unofficial" version="3.0.5.0" targetFramework="net452" />
-  <package id="HtmlAgilityPack" version="1.8.7" targetFramework="net452" />
-  <package id="RestSharp" version="106.3.1" targetFramework="net452" />
-  <package id="StructureMap" version="4.7.0" targetFramework="net452" />
-  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="2.0.5" targetFramework="net461" />
+  <package id="CommonServiceLocator.StructureMapAdapter.Unofficial" version="3.0.6.0" targetFramework="net461" />
+  <package id="HtmlAgilityPack" version="1.11.25" targetFramework="net461" />
+  <package id="RestSharp" version="106.11.7" targetFramework="net461" />
+  <package id="StructureMap" version="4.7.1" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net461" />
 </packages>
