--- a/LinkCrawler/LinkCrawler/App.config
+++ b/LinkCrawler/LinkCrawler/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="outputProviders" type="System.Configuration.DictionarySectionHandler" />
@@ -7,17 +7,18 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <appSettings>
-    <add key="OnlyReportBrokenLinksToOutput" value="false" />
+    <add key="ReportOnRedirect" value="true" />
+    <add key="ReportOnSuccess" value="false" />
     <add key="CheckImages" value="true" />
     <add key="FollowRedirects" value="false" />
-    <add key="BaseUrl" value="https://www.desco.be/" />
+    <add key="BaseUrl" value="https://www.desco.be/nl-be/" />
     <add key="SuccessHttpStatusCodes" value="1xx,2xx,3xx" />
     <add key="InterestingHttpStatusCodes" value="*" />
     <add key="RedirectHttpStatusCodes" value="3xx" />
     <!--explanation of regex below: http://regexr.com/3cqt9 -->
     <add key="ValidUrlRegex" value="(^http[s]?:\/{2})|(^www)|(^\/{1,2})" />
     <add key="PrintSummary" value="true" />
-    <add key="Csv.FilePath" value="C:\tmp\output.csv" />
+    <add key="Csv.FilePath" value="..\output.csv" />
     <add key="Csv.Overwrite" value="true" />
     <add key="Csv.Delimiter" value=";" />
     <add key="Slack.WebHook.Url" value="https://hooks.slack.com/services/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" />
@@ -27,7 +28,7 @@
   </appSettings>
   <outputProviders>
     <add key="Console" value="LinkCrawler.Utils.Outputs.ConsoleOutput" />
-    <!--<add key="Csv" value="LinkCrawler.Utils.Outputs.CsvOutput" />-->
+   <add key="Csv" value="LinkCrawler.Utils.Outputs.CsvOutput" />
     <!--<add key="Slack" value="LinkCrawler.Utils.Outputs.SlackOutput" />-->
   </outputProviders>
   <runtime>
